--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=VroomVault_backend
-
+server.port=8080
 spring.datasource.url=jdbc:mysql://localhost:3306/vehicalrentservice1
 spring.datasource.username=root
 spring.datasource.password=root
@@ -8,3 +8,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+jwt.secret=your-super-secure-secret-key-that-is-very-long
