--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 jwt.secret=your-super-secure-secret-key-that-is-very-long
+razorpay.key=rzp_test_ZA0Jp4gS6ym8c4
+razorpay.secret=9rkLrEWHDxRz4SJwwLv5vhvL
+
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/v3/api-docs
