--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,12 @@
             <artifactId>razorpay-java</artifactId>
             <version>1.4.1</version>
         </dependency>
+		<dependency>
+           <groupId>org.springdoc</groupId>
+         <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+        <version>2.5.0</version>
+            </dependency>
+
 
 	</dependencies>
 
