ready for deployment

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,23 @@
 spring.application.name=VroomVault_backend
 server.port=8080
-spring.datasource.url=jdbc:mysql://localhost:3306/vehicalrentservice1
-spring.datasource.username=root
-spring.datasource.password=root
+
+# Database
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-jwt.secret=your-super-secure-secret-key-that-is-very-long
-razorpay.key=rzp_test_ZA0Jp4gS6ym8c4
-razorpay.secret=9rkLrEWHDxRz4SJwwLv5vhvL
+# JWT
+jwt.secret=${JWT_SECRET}
 
+# Razorpay
+razorpay.key=${RAZORPAY_KEY}
+razorpay.secret=${RAZORPAY_SECRET}
+
+# Swagger
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.api-docs.path=/v3/api-docs
